--- a/package.json
+++ b/package.json
@@ -7,19 +7,12 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production",
-        "mix": "mix"
+        "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^1.13.2",
-        "laravel-mix": "^6.0.49",
+        "axios": "^0.25",
+        "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "resolve-url-loader": "^5.0.0",
-        "sass": "^1.97.0",
-        "sass-loader": "^12.1.0"
-    },
-    "dependencies": {
-        "bootstrap": "^5.3.8"
+        "postcss": "^8.1.14"
     }
 }
